# group_bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
assets/common/items/consumable/: potion_combustion.ron
src/: bot.rs  config.rs  main.rs
